# AIStockPicker

./: .gitignore  LICENSE  README.md  commands.ipynb  main.py  requirements.txt  setup.cfg  setup.py  tox.ini  wsgi.py
application/: app.py  config.py  dependency_container.py
database/: constants.db  setup_sqlite.py
docs/: AIStockPicker.vpp  Background.md  Glossary&Acronyms.md  Home.md  Mapping.md  References.md  RoadmapOverview.md  Views.md
docs/diagrams/: DomainDrivenDesign.md
docs/sql_scripts/: check_incomplete_date.sql  create_triggers.sql  delete_mlflow_runs.sql  mlflow_reset.sql  mlflow_view.sql  truncate.sql  ver_datasdiferents.sql
external_data_local/: AnalysisCorrelation.xlsx  biggest_companies.csv  fetch_external_data.ipynb  load_backups.py  marketcap.csv  multiple_news_approaches.py
novaims/aistockpicker/welcome/: greetings.py
requirements/: dev.txt
src/: main.py
src/appservices/: constants_service.py  equity_service.py  stock_service.py
src/appservices/irepositories/: iconstants_repo.py  iequity_repo.py  imlflow_repo.py  istock_repo.py
src/appservices/iservices/: iconstants_service.py  iequity_service.py  istock_service.py
src/domain/aggregates/: equity.py  stock.py
src/dtos/: equity_dto.py  equity_mapper.py  iequity_mapper.py  istock_mapper.py  stock_dto.py  stock_mapper.py
src/routes/: equity_blueprint.py  stock_blueprint.py
src/serializers/: equity.py  stock.py
src/utils/: create_triggers.sql  utils.py
tests/appservices/: test_stock_service.py
tests/domain/: test_equity.py  test_stock.py
(+21 files in other folders)
