# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = aistockpicker
description = An implementation of a clean architecture in Python.
author = Pedro Pereira
author-email = 20220684@novaims.unl.pt
version = 1.0.0
license = mit
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pdrleal/AIStockPicker
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
